Modelos, migrations y seeders para Artistas, Albumes y Canciones
